@@ -9,6 +9,7 @@
  *******************************************************************************/
 package de.dlr.sc.virsat.model.concept.list;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedList;
@@ -31,13 +32,13 @@ import de.dlr.sc.virsat.model.edit.Activator;
  * Core functionality for the type safe referenced property instance list and implementation to the interface bean list
  * @author leps_je
  *
- * @param <BEAN_TYPE>
+ * @param <BEAN_TYPE> specific bean type to be handled by class
  */
 public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject<? extends ATypeInstance>> extends AArrayInstanceList<BEAN_TYPE> implements IBeanList<BEAN_TYPE> {
 
 	/**
 	 * class constructor of the type sage reference property instance list 
-	 * @param beanClazz 
+	 * @param beanClazz the class of the bean type specified in the generic
 	 */
 	public TypeSafeReferencePropertyInstanceList(Class<BEAN_TYPE> beanClazz) {
 		super();
@@ -46,7 +47,7 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 	
 	/**
 	 * class constructor of the type sage reference property instance list 
-	 * @param beanClazz 
+	 * @param beanClazz the class of the bean type specified in the generic
 	 * @param ai the array Instance
 	 */
 	public TypeSafeReferencePropertyInstanceList(Class<BEAN_TYPE> beanClazz, ArrayInstance ai) {
@@ -66,7 +67,7 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 
 	/**
 	 * this method set the bean clazz
-	 * @param beanClazz 
+	 * @param beanClazz the class of the bean type specified in the generic
 	 */
 	public void setBeanClazz(Class<BEAN_TYPE> beanClazz) {
 		this.beanClazz = beanClazz;
@@ -88,7 +89,7 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 		ai.getArrayInstances().forEach((cpi) -> {
 			try {
 				BEAN_TYPE bean;
-				bean = beanClazz.newInstance();
+				bean = beanClazz.getDeclaredConstructor().newInstance();
 				bean.setATypeInstance(((ReferencePropertyInstance) cpi).getReference());
 				beanList.add(bean);
 			} catch (Exception e) {
@@ -201,9 +202,9 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 			}
 		} else {
 			try {
-				bean = beanClazz.newInstance();
+				bean = beanClazz.getDeclaredConstructor().newInstance();
 				bean.setATypeInstance(ca);
-			} catch (InstantiationException | IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				Activator.getDefault().getLog().error("Could not instantiate bean class", e);
 			}
 		}
